@@ -31,7 +31,10 @@ import com.google.inject.Inject;
 import com.google.inject.Singleton;
 import com.typesafe.config.Config;
 import com.yugabyte.yw.commissioner.Common.CloudType;
+import com.yugabyte.yw.commissioner.tasks.KubernetesTaskBase;
+import com.yugabyte.yw.commissioner.tasks.UniverseTaskBase;
 import com.yugabyte.yw.common.EmailHelper;
+import com.yugabyte.yw.common.FileHelperService;
 import com.yugabyte.yw.common.NodeUniverseManager;
 import com.yugabyte.yw.common.PlatformExecutorFactory;
 import com.yugabyte.yw.common.PlatformScheduler;
@@ -39,7 +42,10 @@ import com.yugabyte.yw.common.PlatformServiceException;
 import com.yugabyte.yw.common.ShellProcessContext;
 import com.yugabyte.yw.common.ShellResponse;
 import com.yugabyte.yw.common.alerts.SmtpData;
+import com.yugabyte.yw.common.config.RuntimeConfGetter;
 import com.yugabyte.yw.common.config.RuntimeConfigFactory;
+import com.yugabyte.yw.common.config.UniverseConfKeys;
+import com.yugabyte.yw.common.gflags.GFlagsUtil;
 import com.yugabyte.yw.common.metrics.MetricService;
 import com.yugabyte.yw.common.utils.Pair;
 import com.yugabyte.yw.forms.AlertingData;
@@ -53,13 +59,14 @@ import com.yugabyte.yw.models.HealthCheck.Details.NodeData;
 import com.yugabyte.yw.models.HighAvailabilityConfig;
 import com.yugabyte.yw.models.Metric;
 import com.yugabyte.yw.models.MetricSourceKey;
+import com.yugabyte.yw.models.NodeInstance;
 import com.yugabyte.yw.models.Provider;
 import com.yugabyte.yw.models.Universe;
 import com.yugabyte.yw.models.configs.CustomerConfig;
 import com.yugabyte.yw.models.filters.MetricFilter;
+import com.yugabyte.yw.models.helpers.CommonUtils;
 import com.yugabyte.yw.models.helpers.NodeDetails;
 import com.yugabyte.yw.models.helpers.PlatformMetrics;
-import com.yugabyte.yw.models.helpers.TaskType;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
@@ -76,6 +83,7 @@ import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
@@ -85,6 +93,7 @@ import java.util.concurrent.CompletionException;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.ThreadFactory;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import javax.mail.MessagingException;
 import lombok.AllArgsConstructor;
@@ -95,7 +104,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
-import play.Configuration;
 import play.Environment;
 import play.inject.ApplicationLifecycle;
 import play.libs.Json;
@@ -116,11 +124,9 @@ public class HealthChecker {
   private static final String MAX_NUM_THREADS_NODE_CHECK_KEY =
       "yb.health.max_num_parallel_node_checks";
 
-  private static final String K8S_NODE_YW_DATA_DIR = "/mnt/disk0/yw-data";
-
   private final Environment environment;
 
-  private final play.Configuration config;
+  private final Config config;
 
   // Last time we sent a status update email per customer.
   private final Map<UUID, Long> lastStatusUpdateTimeMap = new HashMap<>();
@@ -137,6 +143,8 @@ public class HealthChecker {
   private final MetricService metricService;
 
   private final RuntimeConfigFactory runtimeConfigFactory;
+
+  private final RuntimeConfGetter confGetter;
 
   // The thread pool executor for parallelized health checks for multiple universes.
   private final ExecutorService universeExecutor;
@@ -156,18 +164,22 @@ public class HealthChecker {
 
   private final NodeUniverseManager nodeUniverseManager;
 
+  private final FileHelperService fileHelperService;
+
   @Inject
   public HealthChecker(
       Environment environment,
-      Configuration config,
+      Config config,
       PlatformExecutorFactory platformExecutorFactory,
       PlatformScheduler platformScheduler,
       HealthCheckerReport healthCheckerReport,
       EmailHelper emailHelper,
       MetricService metricService,
       RuntimeConfigFactory runtimeConfigFactory,
+      RuntimeConfGetter confGetter,
       ApplicationLifecycle lifecycle,
-      NodeUniverseManager nodeUniverseManager) {
+      NodeUniverseManager nodeUniverseManager,
+      FileHelperService fileHelperService) {
     this(
         environment,
         config,
@@ -176,24 +188,28 @@ public class HealthChecker {
         emailHelper,
         metricService,
         runtimeConfigFactory,
+        confGetter,
         lifecycle,
         nodeUniverseManager,
         createUniverseExecutor(platformExecutorFactory, runtimeConfigFactory.globalRuntimeConf()),
-        createNodeExecutor(platformExecutorFactory, runtimeConfigFactory.globalRuntimeConf()));
+        createNodeExecutor(platformExecutorFactory, runtimeConfigFactory.globalRuntimeConf()),
+        fileHelperService);
   }
 
   HealthChecker(
       Environment environment,
-      Configuration config,
+      Config config,
       PlatformScheduler platformScheduler,
       HealthCheckerReport healthCheckerReport,
       EmailHelper emailHelper,
       MetricService metricService,
       RuntimeConfigFactory runtimeConfigFactory,
+      RuntimeConfGetter confGetter,
       ApplicationLifecycle lifecycle,
       NodeUniverseManager nodeUniverseManager,
       ExecutorService universeExecutor,
-      ExecutorService nodeExecutor) {
+      ExecutorService nodeExecutor,
+      FileHelperService fileHelperService) {
     this.environment = environment;
     this.config = config;
     this.platformScheduler = platformScheduler;
@@ -201,10 +217,12 @@ public class HealthChecker {
     this.emailHelper = emailHelper;
     this.metricService = metricService;
     this.runtimeConfigFactory = runtimeConfigFactory;
+    this.confGetter = confGetter;
     this.lifecycle = lifecycle;
     this.universeExecutor = universeExecutor;
     this.nodeExecutor = nodeExecutor;
     this.nodeUniverseManager = nodeUniverseManager;
+    this.fileHelperService = fileHelperService;
   }
 
   public void initialize() {
@@ -271,7 +289,8 @@ public class HealthChecker {
         }
         // Add node metric value if it's present in data node
         List<Details.Metric> nodeMetrics = nodeData.getMetrics();
-        List<Metric> nodeCustomMetrics = new ArrayList<>(getNodeMetrics(c, u, node, nodeMetrics));
+        List<Metric> nodeCustomMetrics =
+            new ArrayList<>(getNodeMetrics(c, u, nodeData, nodeMetrics));
         if (checkName.equals(UPTIME_CHECK)) {
           // No boot time metric means the instance or the whole node is down
           // and this node shouldn't be counted in other error node count metrics.
@@ -279,8 +298,7 @@ public class HealthChecker {
         }
         if (checkName.equals(NODE_EXPORTER_CHECK)) {
           shouldCollectNodeMetrics =
-              nodeCustomMetrics
-                  .stream()
+              nodeCustomMetrics.stream()
                   .noneMatch(
                       metric ->
                           metric.getName().equals(CUSTOM_NODE_METRICS_COLLECTION_METRIC)
@@ -319,9 +337,7 @@ public class HealthChecker {
       healthScriptMetrics.addAll(
           metrics.stream().map(Metric::getName).collect(Collectors.toList()));
       metrics.addAll(
-          platformMetrics
-              .entrySet()
-              .stream()
+          platformMetrics.entrySet().stream()
               .map(e -> buildMetricTemplate(e.getKey(), u).setValue(e.getValue().doubleValue()))
               .collect(Collectors.toList()));
       // Clean all health check metrics for universe before saving current values
@@ -350,12 +366,13 @@ public class HealthChecker {
       boolean sendMailAlways,
       boolean reportOnlyErrors,
       Details report) {
-    SmtpData smtpData = emailHelper.getSmtpData(c.uuid);
+    SmtpData smtpData = emailHelper.getSmtpData(c.getUuid());
     if (!StringUtils.isEmpty(emailDestinations)
         && (smtpData != null)
         && (sendMailAlways || report.getHasError())) {
       String subject =
-          String.format("%s - <%s> %s", report.getHasError() ? "ERROR" : "OK", c.getTag(), u.name);
+          String.format(
+              "%s - <%s> %s", report.getHasError() ? "ERROR" : "OK", c.getTag(), u.getName());
 
       // LinkedHashMap saves values order.
       JsonNode reportJson = Json.toJson(report);
@@ -391,7 +408,7 @@ public class HealthChecker {
         try {
           checkCustomer(c);
         } catch (Exception ex) {
-          log.error("Error running health check scheduler for customer " + c.uuid, ex);
+          log.error("Error running health check scheduler for customer " + c.getUuid(), ex);
         }
       }
     } catch (Exception e) {
@@ -401,14 +418,14 @@ public class HealthChecker {
 
   public void checkCustomer(Customer c) {
     // We need an alerting config to do work.
-    CustomerConfig config = CustomerConfig.getAlertConfig(c.uuid);
+    CustomerConfig config = CustomerConfig.getAlertConfig(c.getUuid());
 
     boolean shouldSendStatusUpdate = false;
     long storeIntervalMs = healthCheckStoreIntervalMs();
     AlertingData alertingData = null;
     long now = (new Date()).getTime();
-    if (config != null && config.data != null) {
-      alertingData = Json.fromJson(config.data, AlertingData.class);
+    if (config != null && config.getData() != null) {
+      alertingData = Json.fromJson(config.getData(), AlertingData.class);
       if (alertingData.checkIntervalMs > 0) {
         storeIntervalMs = alertingData.checkIntervalMs;
       }
@@ -418,23 +435,23 @@ public class HealthChecker {
               ? statusUpdateIntervalMs()
               : alertingData.statusUpdateIntervalMs;
       shouldSendStatusUpdate =
-          (now - statusUpdateIntervalMs) > lastStatusUpdateTimeMap.getOrDefault(c.uuid, 0L);
+          (now - statusUpdateIntervalMs) > lastStatusUpdateTimeMap.getOrDefault(c.getUuid(), 0L);
       if (shouldSendStatusUpdate) {
-        lastStatusUpdateTimeMap.put(c.uuid, now);
+        lastStatusUpdateTimeMap.put(c.getUuid(), now);
       }
     }
     boolean onlyMetrics =
         !shouldSendStatusUpdate
-            && ((now - storeIntervalMs) < lastCheckTimeMap.getOrDefault(c.uuid, 0L));
+            && ((now - storeIntervalMs) < lastCheckTimeMap.getOrDefault(c.getUuid(), 0L));
 
     if (!onlyMetrics) {
-      lastCheckTimeMap.put(c.uuid, now);
+      lastCheckTimeMap.put(c.getUuid(), now);
     }
     checkAllUniverses(c, alertingData, shouldSendStatusUpdate, onlyMetrics);
   }
 
   public CompletableFuture<Void> checkSingleUniverse(Customer c, Universe u) {
-    if (!runtimeConfigFactory.globalRuntimeConf().getBoolean("yb.cloud.enabled")) {
+    if (!confGetter.getConfForScope(u, UniverseConfKeys.enableTriggerAPI)) {
       throw new PlatformServiceException(BAD_REQUEST, "Manual health check is disabled.");
     }
     // We hardcode the parameters here as this is currently a cloud-only feature
@@ -477,8 +494,7 @@ public class HealthChecker {
     boolean reportOnlyErrors =
         !shouldSendStatusUpdate && alertingData != null && alertingData.reportOnlyErrors;
 
-    c.getUniverses()
-        .stream()
+    c.getUniverses().stream()
         .map(
             u -> {
               String destinations = getAlertDestinations(u, c);
@@ -499,9 +515,7 @@ public class HealthChecker {
 
   public void markUniverseForReUpload(UUID universeUUID) {
     List<Pair<UUID, String>> universeNodeInfos =
-        uploadedNodeInfo
-            .keySet()
-            .stream()
+        uploadedNodeInfo.keySet().stream()
             .filter(key -> key.getFirst().equals(universeUUID))
             .collect(Collectors.toList());
     universeNodeInfos.forEach(uploadedNodeInfo::remove);
@@ -511,9 +525,7 @@ public class HealthChecker {
     cancelHealthCheck(universeUUID);
     runningHealthChecks.remove(universeUUID);
     List<Pair<UUID, String>> universeNodeInfos =
-        uploadedNodeInfo
-            .keySet()
-            .stream()
+        uploadedNodeInfo.keySet().stream()
             .filter(key -> key.getFirst().equals(universeUUID))
             .collect(Collectors.toList());
     universeNodeInfos.forEach(uploadedNodeInfo::remove);
@@ -551,8 +563,9 @@ public class HealthChecker {
 
   public CompletableFuture<Void> runHealthCheck(
       CheckSingleUniverseParams params, Boolean ignoreLastCheck) {
-    String universeName = params.universe.name;
-    CompletableFuture<Void> lastCheck = this.runningHealthChecks.get(params.universe.universeUUID);
+    String universeName = params.universe.getName();
+    CompletableFuture<Void> lastCheck =
+        this.runningHealthChecks.get(params.universe.getUniverseUUID());
     // Only schedule a task if the previous one for the given universe has completed.
     if (!ignoreLastCheck && lastCheck != null && !lastCheck.isDone()) {
       log.info("Health check for universe {} is still running. Skipping...", universeName);
@@ -584,13 +597,13 @@ public class HealthChecker {
             this.universeExecutor);
 
     // Add the task to the map of running tasks.
-    this.runningHealthChecks.put(params.universe.universeUUID, task);
+    this.runningHealthChecks.put(params.universe.getUniverseUUID(), task);
 
     return task;
   }
 
   private String getAlertDestinations(Universe u, Customer c) {
-    List<String> destinations = emailHelper.getDestinations(c.uuid);
+    List<String> destinations = emailHelper.getDestinations(c.getUuid());
     if (destinations.size() == 0) {
       return null;
     }
@@ -607,28 +620,22 @@ public class HealthChecker {
     return silenceEmails ? null : String.join(",", destinations);
   }
 
-  private static boolean isUniverseBusyByTask(UniverseDefinitionTaskParams details) {
-    return details.updateInProgress
-        && details.updatingTask != TaskType.BackupTable
-        && details.updatingTask != TaskType.MultiTableBackup
-        && details.updatingTask != TaskType.CreateBackup
-        && details.updatingTask != TaskType.RestoreBackup;
-  }
-
   public void checkSingleUniverse(CheckSingleUniverseParams params) {
     // Validate universe data and make sure nothing is in progress.
     UniverseDefinitionTaskParams details = params.universe.getUniverseDetails();
     if (details == null) {
-      log.warn("Skipping universe " + params.universe.name + " due to invalid details json...");
+      log.warn(
+          "Skipping universe " + params.universe.getName() + " due to invalid details json...");
       setHealthCheckFailedMetric(params.customer, params.universe);
       return;
     }
     if (details.universePaused) {
-      log.warn("Skipping universe " + params.universe.name + " as it is in the paused state...");
+      log.warn(
+          "Skipping universe " + params.universe.getName() + " as it is in the paused state...");
       return;
     }
-    if (isUniverseBusyByTask(details)) {
-      log.warn("Skipping universe " + params.universe.name + " due to task in progress...");
+    if (details.isUniverseBusyByTask()) {
+      log.warn("Skipping universe " + params.universe.getName() + " due to task in progress...");
       return;
     }
     Date startTime = new Date();
@@ -636,49 +643,66 @@ public class HealthChecker {
     String providerCode;
     int masterIndex = 0;
     int tserverIndex = 0;
-    CustomerTask lastTask = CustomerTask.getLatestByUniverseUuid(params.universe.universeUUID);
+    CustomerTask lastTask = CustomerTask.getLastTaskByTargetUuid(params.universe.getUniverseUUID());
     Long potentialStartTime = null;
     if (lastTask != null && lastTask.getCompletionTime() != null) {
       potentialStartTime = lastTask.getCompletionTime().getTime();
     }
     boolean testReadWrite =
-        runtimeConfigFactory
-            .forUniverse(params.universe)
-            .getBoolean("yb.metrics.db_read_write_test");
+        confGetter.getConfForScope(params.universe, UniverseConfKeys.dbReadWriteTest);
+    boolean testYsqlshConnectivity =
+        confGetter.getConfForScope(params.universe, UniverseConfKeys.ysqlshConnectivityTest);
+    boolean testCqlshConnectivity =
+        confGetter.getConfForScope(params.universe, UniverseConfKeys.cqlshConnectivityTest);
     for (UniverseDefinitionTaskParams.Cluster cluster : details.clusters) {
       UserIntent userIntent = cluster.userIntent;
       Provider provider = Provider.get(UUID.fromString(userIntent.provider));
       if (provider == null) {
         log.warn(
             "Skipping universe "
-                + params.universe.name
+                + params.universe.getName()
                 + " due to invalid provider "
                 + cluster.userIntent.provider);
         setHealthCheckFailedMetric(params.customer, params.universe);
 
         return;
       }
-      providerCode = provider.code;
-      for (NodeDetails nd : details.nodeDetailsSet) {
+      providerCode = provider.getCode();
+      List<NodeDetails> activeNodes =
+          details.getNodesInCluster(cluster.uuid).stream()
+              .filter(NodeDetails::isActive)
+              .collect(Collectors.toList());
+      for (NodeDetails nd : activeNodes) {
         if (nd.cloudInfo.private_ip == null) {
           log.warn(
               String.format(
-                  "Universe %s has unprovisioned node %s.", params.universe.name, nd.nodeName));
+                  "Universe %s has active unprovisioned node %s.",
+                  params.universe.getName(), nd.nodeName));
           setHealthCheckFailedMetric(params.customer, params.universe);
           return;
         }
       }
       List<NodeDetails> sortedDetails =
-          details
-              .getNodesInCluster(cluster.uuid)
-              .stream()
+          activeNodes.stream()
               .sorted(Comparator.comparing(NodeDetails::getNodeName))
               .collect(Collectors.toList());
+      Set<UUID> nodeUuids =
+          sortedDetails.stream()
+              .map(NodeDetails::getNodeUuid)
+              .filter(Objects::nonNull)
+              .collect(Collectors.toSet());
+      Map<UUID, NodeInstance> nodeInstanceMap =
+          NodeInstance.listByUuids(nodeUuids).stream()
+              .collect(Collectors.toMap(NodeInstance::getNodeUuid, Function.identity()));
       for (NodeDetails nodeDetails : sortedDetails) {
+        NodeInstance nodeInstance = nodeInstanceMap.get(nodeDetails.getNodeUuid());
         NodeInfo nodeInfo =
             new NodeInfo()
                 .setNodeHost(nodeDetails.cloudInfo.private_ip)
                 .setNodeName(nodeDetails.nodeName)
+                .setNodeUuid(nodeDetails.nodeUuid)
+                .setNodeIdentifier(
+                    nodeInstance != null ? nodeInstance.getDetails().instanceName : "")
                 .setYbSoftwareVersion(userIntent.ybSoftwareVersion)
                 .setEnableYSQL(userIntent.enableYSQL)
                 .setEnableYCQL(userIntent.enableYCQL)
@@ -690,6 +714,8 @@ public class HealthChecker {
                 .setYbHomeDir(provider.getYbHome())
                 .setNodeStartTime(potentialStartTime)
                 .setTestReadWrite(testReadWrite)
+                .setTestYsqlshConnectivity(testYsqlshConnectivity)
+                .setTestCqlshConnectivity(testCqlshConnectivity)
                 .setUniverseUuid(params.universe.getUniverseUUID())
                 .setNodeDetails(nodeDetails);
         if (nodeDetails.isMaster) {
@@ -701,8 +727,11 @@ public class HealthChecker {
         if (providerCode.equals(Common.CloudType.kubernetes.toString())) {
           nodeInfo.setK8s(true);
         }
-        if (userIntent.tserverGFlags.containsKey("ssl_protocols")) {
-          nodeInfo.setSslProtocol(cluster.userIntent.tserverGFlags.get("ssl_protocols"));
+        Map<String, String> tserverGflags =
+            GFlagsUtil.getGFlagsForNode(
+                nodeDetails, UniverseTaskBase.ServerType.TSERVER, cluster, details.clusters);
+        if (tserverGflags.containsKey("ssl_protocols")) {
+          nodeInfo.setSslProtocol(tserverGflags.get("ssl_protocols"));
         }
         if (nodeInfo.enableYSQL && nodeDetails.isYsqlServer) {
           nodeInfo.setYsqlPort(nodeDetails.ysqlServerRpcPort);
@@ -714,15 +743,21 @@ public class HealthChecker {
         if (nodeInfo.enableYEDIS && nodeDetails.isRedisServer) {
           nodeInfo.setRedisPort(nodeDetails.redisServerRpcPort);
         }
-        if (!provider.code.equals(CloudType.onprem.toString())
-            && !provider.code.equals(CloudType.kubernetes.toString())) {
+        if (!provider.getCode().equals(CloudType.onprem.toString())
+            && !provider.getCode().equals(CloudType.kubernetes.toString())) {
           nodeInfo.setCheckClock(true);
         }
         if (params.universe.isYbcEnabled()) {
           nodeInfo
               .setEnableYbc(true)
               .setYbcPort(
-                  params.universe.getUniverseDetails().communicationPorts.ybControllerrRpcPort);
+                  params.universe.getUniverseDetails().communicationPorts.ybControllerrRpcPort)
+              .setYbcDir(
+                  nodeInfo.isK8s()
+                      ? String.format(
+                          CommonUtils.DEFAULT_YBC_DIR,
+                          GFlagsUtil.getCustomTmpDirectory(nodeDetails, params.universe))
+                      : nodeInfo.getYbHomeDir());
         }
         nodeMetadata.add(nodeInfo);
       }
@@ -731,12 +766,12 @@ public class HealthChecker {
     // If last check had errors, set the flag to send an email. If this check will have an error,
     // we would send an email anyway, but if this check shows a healthy universe, let's send an
     // email about it.
-    HealthCheck lastCheck = HealthCheck.getLatest(params.universe.universeUUID);
+    HealthCheck lastCheck = HealthCheck.getLatest(params.universe.getUniverseUUID());
     boolean lastCheckHadErrors = lastCheck != null && lastCheck.hasError();
 
     // Exit without calling script if the universe is in the "updating" state.
     // Doing the check before the Python script is executed.
-    if (!canHealthCheckUniverse(params.universe.universeUUID) || isShutdown()) {
+    if (!canHealthCheckUniverse(params.universe.getUniverseUUID()) || isShutdown()) {
       return;
     }
 
@@ -744,7 +779,7 @@ public class HealthChecker {
 
     Details fullReport =
         new Details()
-            .setTimestamp(startTime)
+            .setTimestampIso(startTime)
             .setYbVersion(details.getPrimaryCluster().userIntent.ybSoftwareVersion)
             .setData(nodeReports)
             .setHasError(nodeReports.stream().anyMatch(NodeData::getHasError))
@@ -754,7 +789,7 @@ public class HealthChecker {
     // Checking the interruption necessity after the Python script finished.
     // It is not needed to analyze results if the universe has the "update in
     // progress" state.
-    if (!canHealthCheckUniverse(params.universe.universeUUID) || isShutdown()) {
+    if (!canHealthCheckUniverse(params.universe.getUniverseUUID()) || isShutdown()) {
       return;
     }
 
@@ -765,21 +800,18 @@ public class HealthChecker {
 
     log.info(
         "Health check for universe {} reported {}. [ {} ms ]",
-        params.universe.name,
+        params.universe.getName(),
         (healthCheckReport.getHasError() ? "errors" : "success"),
         durationMs);
     if (healthCheckReport.getHasError()) {
       List<NodeData> failedChecks =
-          healthCheckReport
-              .getData()
-              .stream()
+          healthCheckReport.getData().stream()
               .filter(NodeData::getHasError)
               .collect(Collectors.toList());
       log.warn(
           "Following checks failed for universe {}:\n{}",
-          params.universe.name,
-          failedChecks
-              .stream()
+          params.universe.getName(),
+          failedChecks.stream()
               .map(NodeData::toHumanReadableString)
               .collect(Collectors.joining("\n")));
     }
@@ -797,7 +829,7 @@ public class HealthChecker {
       }
 
       HealthCheck.addAndPrune(
-          params.universe.universeUUID, params.universe.customerId, healthCheckReport);
+          params.universe.getUniverseUUID(), params.universe.getCustomerId(), healthCheckReport);
     }
 
     metricService.setOkStatusMetric(
@@ -807,9 +839,9 @@ public class HealthChecker {
   private List<NodeData> checkNodes(Universe universe, List<NodeInfo> nodes) {
     // Check if it should log the output of the command.
     boolean shouldLogOutput =
-        runtimeConfigFactory.forUniverse(universe).getBoolean("yb.health.logOutput");
+        confGetter.getConfForScope(universe, UniverseConfKeys.healthLogOutput);
     int nodeCheckTimeoutSec =
-        runtimeConfigFactory.forUniverse(universe).getInt("yb.health.nodeCheckTimeoutSec");
+        confGetter.getConfForScope(universe, UniverseConfKeys.nodeCheckTimeoutSec);
 
     Map<String, CompletableFuture<Details>> nodeChecks = new HashMap<>();
     for (NodeInfo nodeInfo : nodes) {
@@ -827,8 +859,9 @@ public class HealthChecker {
           new NodeData()
               .setNode(nodeInfo.nodeHost)
               .setNodeName(nodeInfo.nodeName)
+              .setNodeIdentifier(nodeInfo.nodeIdentifier)
               .setMessage("Node")
-              .setTimestamp(new Date());
+              .setTimestampIso(new Date());
       try {
         CompletableFuture<Details> future = nodeChecks.get(nodeInfo.getNodeName());
         result.addAll(future.get().getData());
@@ -867,7 +900,7 @@ public class HealthChecker {
 
   private Details checkNode(
       Universe universe, NodeInfo nodeInfo, boolean logOutput, int timeoutSec) {
-    Pair<UUID, String> nodeKey = new Pair<>(universe.universeUUID, nodeInfo.getNodeName());
+    Pair<UUID, String> nodeKey = new Pair<>(universe.getUniverseUUID(), nodeInfo.getNodeName());
     NodeInfo uploadedInfo = uploadedNodeInfo.get(nodeKey);
     ShellProcessContext context =
         ShellProcessContext.builder()
@@ -878,7 +911,8 @@ public class HealthChecker {
     if (uploadedInfo == null && !nodeInfo.isK8s()) {
       // Only upload it once for new node, as it only depends on yb home dir.
       // Also skip upload for k8s as no one will call it on k8s pod.
-      String generatedScriptPath = generateCollectMetricsScript(universe.universeUUID, nodeInfo);
+      String generatedScriptPath =
+          generateCollectMetricsScript(universe.getUniverseUUID(), nodeInfo);
 
       String scriptPath = nodeInfo.getYbHomeDir() + "/bin/collect_metrics.sh";
       nodeUniverseManager
@@ -893,10 +927,15 @@ public class HealthChecker {
     }
 
     String scriptPath =
-        (nodeInfo.isK8s() ? K8S_NODE_YW_DATA_DIR : nodeInfo.getYbHomeDir()) + "/bin/node_health.py";
+        Paths.get(
+                (nodeInfo.isK8s()
+                    ? KubernetesTaskBase.K8S_NODE_YW_DATA_DIR
+                    : nodeInfo.getYbHomeDir()),
+                "/bin/node_health.py")
+            .toString();
     if (uploadedInfo == null || !uploadedInfo.equals(nodeInfo)) {
       log.info("Uploading health check script to node {}", nodeInfo.getNodeName());
-      String generatedScriptPath = generateNodeCheckScript(universe.universeUUID, nodeInfo);
+      String generatedScriptPath = generateNodeCheckScript(universe.getUniverseUUID(), nodeInfo);
 
       nodeUniverseManager
           .uploadFileToNode(
@@ -936,9 +975,9 @@ public class HealthChecker {
       // For now it has no universe/cluster specific info. Add placeholder substitution here once
       // they are added.
       Path path =
-          Paths.get("/tmp/collect_metrics_" + universeUuid + "_" + nodeInfo.nodeName + ".sh");
-
-      Files.write(path, scriptContent.getBytes(StandardCharsets.UTF_8));
+          fileHelperService.createTempFile(
+              "collect_metrics_" + universeUuid + "_" + nodeInfo.nodeUuid, ".sh");
+      Files.writeString(path, scriptContent);
 
       return path.toString();
     } catch (IOException e) {
@@ -951,12 +990,16 @@ public class HealthChecker {
     try (InputStream templateStream =
         environment.resourceAsStream("health/node_health.py.template")) {
       template = IOUtils.toString(templateStream, StandardCharsets.UTF_8);
+      Universe universe = Universe.getOrBadRequest(universeUuid);
+      String customTmpDirectory = GFlagsUtil.getCustomTmpDirectory(nodeInfo.nodeDetails, universe);
       String scriptContent = template.replace("{{NODE_INFO}}", Json.toJson(nodeInfo).toString());
+      scriptContent = scriptContent.replace("{{TMP_DIR}}", customTmpDirectory);
       // For now it has no universe/cluster specific info. Add placeholder substitution here once
       // they are added.
-      Path path = Paths.get("/tmp/node_health_" + universeUuid + "_" + nodeInfo.nodeName + ".py");
-
-      Files.write(path, scriptContent.getBytes(StandardCharsets.UTF_8));
+      Path path =
+          fileHelperService.createTempFile(
+              "node_health_" + universeUuid + "_" + nodeInfo.nodeUuid, ".py");
+      Files.writeString(path, scriptContent);
 
       return path.toString();
     } catch (IOException e) {
@@ -970,8 +1013,7 @@ public class HealthChecker {
     allMetricNames.addAll(
         metrics.stream().map(PlatformMetrics::getMetricName).collect(Collectors.toList()));
     List<MetricSourceKey> metricSourceKeys =
-        allMetricNames
-            .stream()
+        allMetricNames.stream()
             .map(
                 metricName ->
                     MetricSourceKey.builder()
@@ -995,8 +1037,9 @@ public class HealthChecker {
       return false;
     }
 
-    if (isUniverseBusyByTask(universeDetails)) {
-      log.warn("Cancelling universe " + u.get().name + " health-check, some task is in progress.");
+    if (universeDetails.isUniverseBusyByTask()) {
+      log.warn(
+          "Cancelling universe " + u.get().getName() + " health-check, some task is in progress.");
       return false;
     }
     return true;
@@ -1009,8 +1052,11 @@ public class HealthChecker {
     private int tserverIndex = -1;
     private boolean isK8s = false;
     private String ybHomeDir;
+    private String ybcDir = "";
     private String nodeHost;
     private String nodeName;
+    private UUID nodeUuid;
+    private String nodeIdentifier = "";
     private String ybSoftwareVersion = null;
     private boolean enableTls = false;
     private boolean enableTlsClient = false;
@@ -1029,6 +1075,8 @@ public class HealthChecker {
     private boolean checkClock = false;
     private Long nodeStartTime = null;
     private boolean testReadWrite = true;
+    private boolean testYsqlshConnectivity = true;
+    private boolean testCqlshConnectivity = true;
     private boolean enableYbc = false;
     private int ybcPort = 18018;
     private UUID universeUuid;
@@ -1037,13 +1085,11 @@ public class HealthChecker {
 
   private Details removeMetricOnlyChecks(Details details) {
     List<NodeData> nodeReports =
-        details
-            .getData()
-            .stream()
+        details.getData().stream()
             .filter(data -> !data.getMetricsOnly())
             .collect(Collectors.toList());
     return new Details()
-        .setTimestamp(details.getTimestamp())
+        .setTimestampIso(details.getTimestampIso())
         .setYbVersion(details.getYbVersion())
         .setData(nodeReports)
         .setHasError(nodeReports.stream().anyMatch(NodeData::getHasError))
